--- a/charts/gitlab/gprd/charts/gitlab/charts/kas/templates/deployment.yaml
+++ b/charts/gitlab/gprd/charts/gitlab/charts/kas/templates/deployment.yaml
@@ -17,6 +17,9 @@ spec:
   {{- if .Values.deployment.strategy }}
   strategy: {{ .Values.deployment.strategy | toYaml | nindent 4 }}
   {{- end }}
+  {{- if .Values.deployment.minReadySeconds }}
+  minReadySeconds: {{ .Values.deployment.minReadySeconds }}
+  {{- end }}
   template:
     metadata:
       labels:
