--- a/charts/gitlab/gprd/charts/gitlab/charts/kas/values.yaml
+++ b/charts/gitlab/gprd/charts/gitlab/charts/kas/values.yaml
@@ -85,6 +85,7 @@ privateApi: {}
 
 deployment:
   strategy: {}
+  # minReadySeconds: 0
 
 ## Allow to overwrite under which User and Group we're running.
 securityContext:
