--- a/charts/gitlab/gprd/charts/gitlab/charts/gitlab-shell/values.yaml
+++ b/charts/gitlab/gprd/charts/gitlab/charts/gitlab-shell/values.yaml
@@ -62,7 +62,7 @@ hpa:
   targetAverageValue: 100m
 
 deployment:
-  # terminationGracePeriodSeconds: 30
+  terminationGracePeriodSeconds: 30
   livenessProbe:
     initialDelaySeconds: 10
     periodSeconds: 10
@@ -83,13 +83,17 @@ logging:
 
 config:
   clientAliveInterval: 0
-  loginGraceTime: 120
+  loginGraceTime: 60
   maxStartups:
     start: 10
     rate: 30
     full: 100
   proxyProtocol: false
   proxyPolicy: "use"
+  proxyHeaderTimeout: 500ms
+  ciphers: [aes128-gcm@openssh.com, chacha20-poly1305@openssh.com, aes256-gcm@openssh.com, aes128-ctr, aes192-ctr, aes256-ctr]
+  kexAlgorithms: [curve25519-sha256, curve25519-sha256@libssh.org, ecdh-sha2-nistp256, ecdh-sha2-nistp384, ecdh-sha2-nistp521, diffie-hellman-group14-sha256, diffie-hellman-group14-sha1]
+  macs: [hmac-sha2-256-etm@openssh.com, hmac-sha2-512-etm@openssh.com, hmac-sha2-256, hmac-sha2-512, hmac-sha1]
 
 ## Allow to overwrite under which User and Group we're running.
 securityContext:
