--- a/charts/gitlab/gprd/values.yaml
+++ b/charts/gitlab/gprd/values.yaml
@@ -184,6 +184,7 @@ global:
   ## Rails based portions of this chart share many settings
   appConfig:
     ## https://docs.gitlab.com/charts/charts/globals#general-application-settings
+    # cdnHost:
     enableUsagePing: true
     enableSeatLink: true
     enableImpersonation:
@@ -728,6 +729,7 @@ upgradeCheck:
     runAsUser: 65534
     fsGroup: 65534
   tolerations: []
+  annotations: {}
   resources:
     requests:
       cpu: 50m
