--- a/charts/gitlab/pre/.gitlab-ci.yml
+++ b/charts/gitlab/pre/.gitlab-ci.yml
@@ -135,9 +135,6 @@ lint_package:
   stage: preflight
   when: always
   script:
-    - helm repo add gitlab https://charts.gitlab.io
-    - helm repo add jetstack https://charts.jetstack.io
-    - helm dependencies update
     - helm lint --set certmanager-issuer.email=support@gitlab.com
     - mkdir -p build
     - helm package -d build .
@@ -157,9 +154,6 @@ lint_package:
   stage: preflight
   when: always
   script:
-    - helm repo add gitlab https://charts.gitlab.io
-    - helm repo add jetstack https://charts.jetstack.io
-    - helm dependencies update
     - helm kubeval . --force-color --strict --set certmanager-issuer.email=support@gitlab.com $HELM_EXTRAS --skip-kinds "CustomResourceDefinition" -v $KUBE_VERSION
   except:
     <<: *deps_pipeline
@@ -329,7 +323,6 @@ stop_review_eks:
   script:
     - check_kube_domain
     - check_domain_ip
-#    - download_chart
     - ensure_namespace
     - create_secret
     - deploy
@@ -357,7 +350,6 @@ stop_review_eks:
     - mkdir -p $(dirname "${VARIABLES_FILE}")
     - check_kube_domain
     - check_domain_ip
-#    - download_chart
     - ensure_namespace
     - create_secret
     - deploy
@@ -741,6 +733,7 @@ production_specs_eks:
   variables:
     DOCKER_HOST: tcp://docker:2375
     QA_ARTIFACTS_DIR: $CI_PROJECT_DIR
+    QA_CAN_TEST_PRAEFECT: "false"
   script:
     - docker login -u gitlab-ci-token -p "$CI_JOB_TOKEN" "$CI_REGISTRY"
     - gem install gitlab-qa
@@ -791,7 +784,6 @@ wait_for_dev_images:
     # CHANNEL: "unstable"
     VERSION_SUFFIX: ""
   script:
-    - helm dependency update
     - EXTRACTED_VERSION=$(awk '/^version/ {print $2}' Chart.yaml)
     - VERSION=${VERSION:-${EXTRACTED_VERSION}}
     - echo "Packaging ${VERSION}${VERSION_SUFFIX} for ${CHANNEL}"
@@ -849,7 +841,7 @@ release_package:
 .qa_branch:
   extends:
     - .qa
-  parallel: 10
+  parallel: 7
   except:
     refs:
       - master
@@ -859,7 +851,7 @@ release_package:
 .qa_production:
   extends:
     - .qa
-  parallel: 10
+  parallel: 7
   only:
     refs:
       - master
