--- a/charts/gitlab/gprd/values.yaml
+++ b/charts/gitlab/gprd/values.yaml
@@ -279,7 +279,7 @@ global:
       matomoDisableCookies:
       oneTrustId:
       googleTagManagerNonceId:
-      bizible: true
+      bizible:
 
     ## https://docs.gitlab.com/charts/charts/globals#lfs-artifacts-uploads-packages-external-mr-diffs-and-dependency-proxy
     object_store:
