--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ include:
   - template: Security/Dependency-Scanning.gitlab-ci.yml
 
 variables:
-  CI_IMAGE_VERSION: 'v5.15.0'
+  CI_IMAGE_VERSION: v10.0.0
   AUTO_DEPLOY: 'false'
 
 #############################################################
