--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,8 @@ include:
   - template: Security/Dependency-Scanning.gitlab-ci.yml
 
 variables:
-  CI_IMAGE_VERSION: v10.0.0
+  # renovate: datasource=docker depName=gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci registryUrl=https://registry.gitlab.com versioning=docker
+  CI_IMAGE_VERSION: v12.2.1
   AUTO_DEPLOY: 'false'
 
 #############################################################
