--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -185,6 +185,48 @@ gprd-cny:auto-deploy:
   stage: gprd-cny:deploy
   tags:
     - k8s-workloads
+gprd-cny:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gprd
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  resource_group: gprd-cny
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl -s cny template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
+  tags:
+    - k8s-workloads
 gprd-cny:dryrun:
   before_script: |
     if [[ $LOG_LEVEL == "debug" ]]; then
@@ -331,6 +373,47 @@ gprd-us-east1-b:auto-deploy:
   stage: gprd:deploy:alpha
   tags:
     - k8s-workloads
+gprd-us-east1-b:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gprd-us-east1-b
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
+  tags:
+    - k8s-workloads
 gprd-us-east1-b:dryrun:
   before_script: |
     if [[ $LOG_LEVEL == "debug" ]]; then
@@ -472,6 +555,47 @@ gprd-us-east1-c:auto-deploy:
   script: |
     bin/k-ctl  upgrade
   stage: gprd:deploy:beta
+  tags:
+    - k8s-workloads
+gprd-us-east1-c:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gprd-us-east1-c
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
   tags:
     - k8s-workloads
 gprd-us-east1-c:dryrun:
@@ -617,6 +741,47 @@ gprd-us-east1-d:auto-deploy:
   stage: gprd:deploy:beta
   tags:
     - k8s-workloads
+gprd-us-east1-d:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gprd-us-east1-d
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
+  tags:
+    - k8s-workloads
 gprd-us-east1-d:dryrun:
   before_script: |
     if [[ $LOG_LEVEL == "debug" ]]; then
@@ -758,6 +923,47 @@ gprd:auto-deploy:
   script: |
     bin/k-ctl  upgrade
   stage: gprd:deploy:alpha
+  tags:
+    - k8s-workloads
+gprd:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gprd
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
   tags:
     - k8s-workloads
 gprd:dryrun:
@@ -902,6 +1108,48 @@ gstg-cny:auto-deploy:
   script: |
     bin/k-ctl -s cny upgrade
   stage: non-prod-cny:deploy
+  tags:
+    - k8s-workloads
+gstg-cny:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gstg
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  resource_group: gstg-cny
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl -s cny template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
   tags:
     - k8s-workloads
 gstg-cny:dryrun:
@@ -1050,6 +1298,47 @@ gstg-us-east1-b:auto-deploy:
   stage: non-prod:deploy
   tags:
     - k8s-workloads
+gstg-us-east1-b:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gstg-us-east1-b
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
+  tags:
+    - k8s-workloads
 gstg-us-east1-b:dryrun:
   before_script: |
     if [[ $LOG_LEVEL == "debug" ]]; then
@@ -1191,6 +1480,47 @@ gstg-us-east1-c:auto-deploy:
   script: |
     bin/k-ctl  upgrade
   stage: non-prod:deploy
+  tags:
+    - k8s-workloads
+gstg-us-east1-c:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gstg-us-east1-c
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
   tags:
     - k8s-workloads
 gstg-us-east1-c:dryrun:
@@ -1336,6 +1666,47 @@ gstg-us-east1-d:auto-deploy:
   stage: non-prod:deploy
   tags:
     - k8s-workloads
+gstg-us-east1-d:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gstg-us-east1-d
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
+  tags:
+    - k8s-workloads
 gstg-us-east1-d:dryrun:
   before_script: |
     if [[ $LOG_LEVEL == "debug" ]]; then
@@ -1477,6 +1848,47 @@ gstg:auto-deploy:
   script: |
     bin/k-ctl  upgrade
   stage: non-prod:deploy
+  tags:
+    - k8s-workloads
+gstg:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .gstg
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
   tags:
     - k8s-workloads
 gstg:dryrun:
@@ -1742,6 +2154,47 @@ pre:auto-deploy:
   script: |
     bin/k-ctl  upgrade
   stage: non-prod:deploy
+  tags:
+    - k8s-workloads
+pre:check-label-taxonomy:
+  before_script: |
+    if [[ $LOG_LEVEL == "debug" ]]; then
+      echo "A high debug level may expose secrets, this job will now exit..."
+      exit 1
+    fi
+    eval $(./bin/k-ctl config 2>/dev/null)
+    if [[ $DRY_RUN == "false" ]]; then
+      echo 'Using SERVICE_KEY'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY
+    else
+      echo 'Using SERVICE_KEY_RO'
+      gcloud auth activate-service-account --key-file $SERVICE_KEY_RO
+    fi
+    gcloud config set project $PROJECT
+    gcloud container clusters get-credentials ${CLUSTER} --region ${REGION}
+  extends:
+    - .pre
+  image: ${CI_REGISTRY}/gitlab-com/gl-infra/k8s-workloads/common/k8-helm-ci:${CI_IMAGE_VERSION}
+  rules:
+    - if: $CI_API_V4_URL == "https://gitlab.com/api/v4"
+      when: never
+    - if: $AUTO_DEPLOY == "true"
+      when: never
+    - if: $CI_PIPELINE_SOURCE == "schedule"
+      when: never
+    - changes:
+        - vendor/charts/gitlab/**/*
+        - bases/**/*
+        - bin/**/*
+        - releases/**/*
+        - '*.yaml'
+        - '*.yml'
+        - .gitlab-ci.yml
+      when: on_success
+  script: |
+    bin/k-ctl  template
+    ./bin/check-label-taxonomy.sh
+  stage: dryrun
   tags:
     - k8s-workloads
 pre:dryrun:
